Cost, Enums, Equipment, Eras
Signed-off-by: Richard J Hancock <rjhancock@tapenvy.us>